deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  namespace: app-namespace # {"$ref":"#/definitions/io.k8s.cli.setters.namespace"}
spec:
  selector:
    matchLabels:
      app: app # {"$ref":"#/definitions/io.k8s.cli.setters.name"}
  replicas: 2 # {"$ref":"#/definitions/io.k8s.cli.setters.replicas"}
  template:
    metadata:
      labels:
        app: app # {"$ref":"#/definitions/io.k8s.cli.setters.name"}
    spec:
      containers:
      - name: app-container
        image: parjanya/samplespringbootapp:1.6-SNAPSHOT # {"$ref":"#/definitions/io.k8s.cli.substitutions.image-value"}
        ports:
        - containerPort: 9999 # {"$ref":"#/definitions/io.k8s.cli.setters.port"}
          name: "container-port"
        readinessProbe:
          httpGet:
            path: "/hello/actuator/health" # {"$ref":"#/definitions/io.k8s.cli.setters.readinessProbePath"}
            port: "container-port"
          initialDelaySeconds: 8
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
        livenessProbe:
          httpGet:
            path: "/hello/commitId" # {"$ref":"#/definitions/io.k8s.cli.setters.livenessProbePath"}
            port: "container-port"
          initialDelaySeconds: 8
          periodSeconds: 10
        resources:
          limits:
            cpu: 1
            memory: "1G"
